--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -4,7 +4,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  background: url(/assets/images/login_bg.jpg) no-repeat center center/cover;
+  background: url(/code/assets/images/login_bg.jpg) no-repeat center center/cover;
 }
 
 .loginAndRegBox {
@@ -19,13 +19,11 @@ body {
 
 .loginAndRegBox .title-box {
   height: 60px;
-  background: url(/assets/images/login_title.png) no-repeat center;
+  background: url(/code/assets/images/login_title.png) no-repeat center;
 }
-
 .reg-box {
   display: none;
 }
-
 .layui-form {
   padding: 0 30px;
 }
@@ -35,7 +33,6 @@ body {
   justify-content: flex-end;
   font-size: 12px;
 }
-
 .layui-form-item {
   position: relative;
 }
